testsuite/tests/checks/subprogram_access/test.out
subp.ads:2:19: error: access to subprogram definition
2 |    type Proc_A is access procedure ( I : Integer);       --  FLAG
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

subp.ads:6:17: error: access to subprogram definition
6 |       Process : access procedure (J : in out Integer));  --  FLAG
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

